--- a/app/src/main/res/layout/workerdatadialog.xml
+++ b/app/src/main/res/layout/workerdatadialog.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/workerDialogList"
+        android:id="@+id/workerDialogList12"
         android:layout_width="368dp"
         android:layout_height="495dp"
         android:layout_marginStart="8dp"
