--- a/app/src/main/res/layout/activity_attendance_base.xml
+++ b/app/src/main/res/layout/activity_attendance_base.xml
@@ -11,15 +11,6 @@
         android:id="@+id/attendancetoolbar"
         layout="@layout/toolbar" />
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="56dp"
-        android:text="@string/title_home"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -32,5 +23,17 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/attendancemenu" />
+
+    <Button
+        android:id="@+id/deleteattendanceButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="CLICK THIS TO DELETE THE LAST ENTRY"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/attendancetoolbar" />
 
 </android.support.constraint.ConstraintLayout>
