--- a/app/src/main/res/layout/activity_production_main_menu.xml
+++ b/app/src/main/res/layout/activity_production_main_menu.xml
@@ -10,16 +10,6 @@
         android:id="@+id/ProductionMainMenuToolbar"
         layout="@layout/toolbar"/>
 
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="96dp"
-        android:layout_marginTop="184dp"
-        android:text="@string/title_home"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="0dp"
@@ -31,5 +21,29 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/productionmenu" />
+
+    <Button
+        android:id="@+id/deleteTotalProductionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="CLICK THIS TO DELETE THE LAST ENTRY OF TOTAL PRODUCTION"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ProductionMainMenuToolbar" />
+
+    <Button
+        android:id="@+id/deleteattendanceButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="CLICK THIS TO DELETE THE LAST ENTRY OF TOTAL PRODUCTION"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ProductionMainMenuToolbar" />
 
 </android.support.constraint.ConstraintLayout>
