--- a/app/src/main/res/layout/activity_qand_a.xml
+++ b/app/src/main/res/layout/activity_qand_a.xml
@@ -1,12 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.activities.supervisor.Production.QandAActivity">
-    <include
-        android:id="@+id/QandAToolbar"
-        layout="@layout/toolbar"/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <include
+        android:id="@+id/QandAactivityToolbar"
+        layout="@layout/toolbar" />
+
+    <Button
+        android:id="@+id/QandAdateButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+
+    <!-- Editext for Search -->
+
+    <!-- List View -->
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/inputSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/inputsearch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="search workers ...."
+            android:inputType="textAutoComplete" />
+    </android.support.design.widget.TextInputLayout>
+
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
