supervisor module without delete and realeased for testing

--- a/app/src/main/res/layout/activity_cnc.xml
+++ b/app/src/main/res/layout/activity_cnc.xml
@@ -13,7 +13,7 @@
         android:id="@+id/PresonwiseButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Person wise attendace" />
+        android:text="Person wise PRODUCTION" />
 
     <Button
         android:id="@+id/dateButton"
