--- a/app/src/main/res/menu/attendancemenu.xml
+++ b/app/src/main/res/menu/attendancemenu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/navigation_attendance_home"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="HOME" />
+    <item
         android:id="@+id/attendance_navigation_casing"
         android:icon="@drawable/ic_polymer_black_24dp"
         android:title="@string/CASING" />
