--- a/app/src/main/res/layout/activity_attendance_base.xml
+++ b/app/src/main/res/layout/activity_attendance_base.xml
@@ -24,30 +24,30 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/attendancemenu" />
 
-    <Button
-        android:id="@+id/deleteattendanceButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="DELETE LAST ENTRY FROM ATTENDANCE"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/attendancetoolbar"
-        app:layout_constraintVertical_bias="0.468" />
+    <!--<Button-->
+    <!--android:id="@+id/deleteattendanceButton"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginTop="8dp"-->
+    <!--android:layout_marginBottom="8dp"-->
+    <!--android:text="DELETE LAST ENTRY FROM ATTENDANCE"-->
+    <!--app:layout_constraintBottom_toTopOf="@+id/navigation"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintHorizontal_bias="0.505"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/attendancetoolbar"-->
+    <!--app:layout_constraintVertical_bias="0.468" />-->
 
-    <TextView
-        android:id="@+id/countTextview"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/deleteattendanceButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/attendancetoolbar" />
+    <!--<TextView-->
+    <!--android:id="@+id/countTextview"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="20dp"-->
+    <!--android:layout_marginTop="8dp"-->
+    <!--android:layout_marginBottom="8dp"-->
+    <!--android:text=""-->
+    <!--app:layout_constraintBottom_toTopOf="@+id/deleteattendanceButton"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/attendancetoolbar" />-->
 
 </android.support.constraint.ConstraintLayout>
