--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -14,6 +14,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="88dp"
+                android:layout_marginTop="100dp"
                 app:srcCompat="@mipmap/ic_launcher_round" />
 
 
