--- a/app/src/main/res/layout/attendance_dialog.xml
+++ b/app/src/main/res/layout/attendance_dialog.xml
@@ -5,10 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="25dp"
-    android:paddingTop="25dp"
-    android:paddingRight="25dp"
-    android:paddingBottom="25dp">
+    android:padding="25dp">
 
 
     <TextView
@@ -40,6 +37,7 @@
         android:layout_alignTop="@+id/pieceordailyspinner"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
+
         android:text="PIECE RATE OR DAILY WAGES"
         app:layout_constraintBottom_toTopOf="@+id/pieceordailyspinner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,6 +51,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="40dp"
+        android:padding="1.5dp"
         app:layout_constraintBottom_toTopOf="@+id/overtimeSpinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -60,11 +59,13 @@
     <TextView
         android:id="@+id/overtime"
         android:layout_width="match_parent"
-        android:layout_height="14dp"
+        android:layout_height="17dp"
         android:layout_alignTop="@+id/overtimeSpinner"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
+        android:padding="1.5dp"
         android:text="OVERTIME"
+
         app:layout_constraintBottom_toTopOf="@+id/overtimeSpinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,6 +78,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="36dp"
+        android:padding="1.5dp"
         app:layout_constraintBottom_toTopOf="@+id/otShiftspinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.466"
@@ -89,6 +91,7 @@
         android:layout_alignTop="@+id/otShiftspinner"
         android:layout_centerHorizontal="true"
         android:text="OVERTIME SHIFT"
+        android:padding="1.5dp"
         app:layout_constraintBottom_toTopOf="@+id/otShiftspinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,6 +114,7 @@
         android:layout_height="37dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:padding="1.5dp"
         android:text="SUBMIT"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
