--- a/app/src/main/res/layout/attendance_dialog.xml
+++ b/app/src/main/res/layout/attendance_dialog.xml
@@ -90,8 +90,8 @@
         android:layout_height="17dp"
         android:layout_alignTop="@+id/otShiftspinner"
         android:layout_centerHorizontal="true"
-        android:text="OVERTIME SHIFT"
         android:padding="1.5dp"
+        android:text="OVERTIME HOURS"
         app:layout_constraintBottom_toTopOf="@+id/otShiftspinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
