--- a/app/src/main/res/layout/activity_admin_attendance_cnc.xml
+++ b/app/src/main/res/layout/activity_admin_attendance_cnc.xml
@@ -8,6 +8,14 @@
         android:id="@+id/adminattendanceCNCworkerToolbar"
         layout="@layout/toolbar" />
 
+    <TextView
+        android:id="@+id/textViewAdminCNCDatewise"
+        style="@style/ThemeOverlay.MyTextDetail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="DATEWISE"
+        android:textSize="24sp" />
+
     <Button
         android:id="@+id/adminAttendanceCNCdateButton"
         android:layout_width="match_parent"
@@ -18,6 +26,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="DATE WISE ATTENDANCE " />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="9dp"
+        android:background="@color/colorPrimaryDark" />
+
+    <TextView
+        android:id="@+id/textViewAdminCNCpersonwise"
+        style="@style/ThemeOverlay.MyTextDetail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="PERSONWISE"
+        android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/adminAttendanceCNCdaterangeButton1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/adminAttendanceCNCdaterangeButton2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+    <Button
+        android:id="@+id/adminAttendanceCNCpersonwisewiseButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="PERSONWISE WISE ATTENDANCE " />
+
+    <Button
+        android:id="@+id/adminAttendanceCNCOvertimewisewiseButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="OVERTIMEWISE WISE ATTENDANCE " />
 
 
 </LinearLayout>
