--- a/app/src/main/res/layout/activity_admin_attendance_grinding.xml
+++ b/app/src/main/res/layout/activity_admin_attendance_grinding.xml
@@ -5,8 +5,16 @@
     android:orientation="vertical">
 
     <include
-        android:id="@+id/adminattendanceGrindingworkerToolbar"
+        android:id="@+id/adminattendancegrindingworkerToolbar"
         layout="@layout/toolbar" />
+
+    <TextView
+        android:id="@+id/textViewAdmiGrindingDatewise"
+        style="@style/ThemeOverlay.MyTextDetail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="DATEWISE"
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/adminAttendanceGrindingdateButton"
@@ -18,6 +26,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="DATE WISE ATTENDANCE " />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="9dp"
+        android:background="@color/colorPrimaryDark" />
+
+    <TextView
+        android:id="@+id/textViewAdminGrindingpersonwise"
+        style="@style/ThemeOverlay.MyTextDetail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="PERSONWISE"
+        android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/adminAttendanceGrindingdaterangeButton1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/adminAttendanceGrindingdaterangeButton2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+    <Button
+        android:id="@+id/adminAttendanceGrindingpersonwisewiseButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="PERSONWISE WISE ATTENDANCE " />
+
+    <Button
+        android:id="@+id/adminAttendanceGrindingOvertimewisewiseButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="OVERTIMEWISE WISE ATTENDANCE " />
 
 
 </LinearLayout>
